fix: adjust hero content spacing

--- a/src/assets/styles/base/utilities.css
+++ b/src/assets/styles/base/utilities.css
@@ -112,11 +112,12 @@
 .m-0 {
   margin: 0;
 }
-
 .mt-0 {
   margin-top: 0;
 }
-
+.mb-4 {
+  margin-bottom: calc(var(--space) * 4);
+}
 .mb-6 {
   margin-bottom: calc(var(--space) * 6);
 }
